plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

allprojects {
    group = 'com.billing'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '21'
    repositories {
        mavenCentral()
    }
}


subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }

    test {
        jvmArgs '-XX:+EnableDynamicAgentLoading'
        // 또는
        // jvmArgs '-Djdk.instrument.traceUsage'
    }
}

